[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
console_log = { version = "0.2", features = ["color"] }
console_error_panic_hook = "0.1"
log = "0.4"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"